@@ -25,6 +25,7 @@
 #include "Defn.h"
 #include "Fileio.h"
 
+#include "system.h"
 #include "terminal.h"
 #include "gtkconsole.h"
 
@@ -51,7 +52,7 @@ R_gtk_terminal_line_event (GtkWidget * widget)
 
 /* Fill a text buffer with user typed console input. */
 int
-Rgnome_ReadConsole (char *prompt, char *buf, int len,
+Rgnome_ReadConsole (char *prompt, unsigned char *buf, int len,
 		    int addtohistory)
 {
   if (!R_Interactive)
